     FIXED: Problems on Mac Pro computers without built-in audio.
     FIXED: Black on black tooltips in the main window.
     FIXED: Auto-squelch sets 0 dBFS too often.
     FIXED: Can not play I/Q files if path contains a space.
     FIXED: Restore gains to slider states when hardware AGC is disabled
  IMPROVED: Default FFT window for reduced spectral leakage.
  IMPROVED: Microtelecom Perseus integration.
  IMPROVED: Implemented PPM correction for RF Space Cloud IQ (gr-osmosdr-gqrx)
  IMPORVED: Implemented PPM correction for PlutoSDR (gr-osmosdr-gqrx)
  IMPROVED: Show configuration file path when listing config files using -l


      2.10: Released January 21, 2018

     FIXED: Crash when starting gqrx using hackrf.
     FIXED: Spelling errors.
  IMPROVED: SDRPlay integration.


       2.9: Released November 11, 2017

       NEW: Airspy HF+ support.
     FIXED: Always save TCP and UDP host settings.
     FIXED: Application hangs when pulseaudio server is not running.


       2.8: Released September 16, 2017

       NEW: Remote control command to set LNB LO (LNB_LO).
     FIXED: Inactive Start DSP and Config buttons in toolbar.
     FIXED: Frequency controller digit not redrawn after a resize.
     FIXED: Set default mode to AM instead of none.
  IMPROVED: Detection of gr-osmosdr when installed in custom directory.
  IMPROVED: Remote frequency handling.


       2.7: Released August 19, 2017

       NEW: Airspy HF+ integration.
       NEW: PlutoSDR integration.
       NEW: Restore filter low cut and high cut between sessions.
       NEW: Restore FM parameters between sessions.
       NEW: Restore remote control state between sessions.
       NEW: Support for passband when setting mode through remote.
       NEW: Widget to enter receiver frequency.
       NEW: Button to reset squelch to its default (-150 dB) value.
     FIXED: Keep waterfall zoom level and zoom slider synchronised.
     FIXED: RDS status is not kept while jumping through bookmark.